extract CSS to separate files, various UX improvements including responsive phone client UI

--- a/html/error.html
+++ b/html/error.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Traffic Warden game</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="static/style.css"/>
     </head>
     <body>
         <h1>Traffic Warden game</h1>
