Some layout fixes, explanations, screenshot

--- a/html/index.html
+++ b/html/index.html
@@ -11,5 +11,11 @@
         {% if is_in_game %}
             <p>To cancel the existing game session: <a href='abort'>abort ongoing game</a></p>
         {% endif %}
+        <h2>About</h2>
+        <p>Traffic Warden is a real-time multiplayer game for up to 8 players.</p>
+        <p>Make quick decisions about where to place your arrow tiles, to direct your car to your goal.</p>
+        <p>Watch out for who's in the lead, sabotage them if you have tiles to spare.</p>
+        <img alt='a screenshot of the traffic warden game being played on a mobile phone' src='static/images/screenshot1.png' style='max-height: 80vh;' />
+        <p>Copyright Lex Bailey 2022</p>
     </body>
 </html>
